--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -1,9 +1,38 @@
 :root {
-  --main-text-font: "Roboto", sans-serif;
+  --main-text-font: "Raleway", sans-serif;
   --main-text-color: #212121;
+  --second-text-font: "Roboto", sans-serif;
 }
 
 body {
-  font-style: var(--main-text-font);
+  font-family: var(--main-text-font);
   color: var(--main-text-color);
+  font-weight: 400px;
+  max-width: auto;
+}
+.main-title {
+  font-family: var(--second-text-font);
+  font-size: 40px;
+  display: flex;
+  justify-content: center;
+  margin-top: 80px;
+}
+.title {
+  font-family: var(--second-text-font);
+  display: flex;
+  justify-content: center;
+}
+.nav-page_list {
+  list-style: none;
+  display: flex;
+  justify-content: center;
+  gap: 20px;
+  margin-bottom: 40px;
+}
+.nav-page_link {
+  display: flex;
+  text-decoration: none;
+  border: 2px solid black;
+  padding: 5px;
+  color: green;
 }
