--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -66,3 +66,16 @@ body {
   justify-content: center;
   gap: 10px;
 }
+
+
+#validation-input {
+  border: 3px solid #bdbdbd;
+}
+
+#validation-input.valid {
+  border-color: #4caf50;
+}
+
+#validation-input.invalid {
+  border-color: #f44336;
+}
